--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   flutter_dotenv: ^5.0.2
+  flutter_web_auth: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
