ログイン完了？

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: test_youtubemusic
+name: test_spotify
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   flutter_dotenv: ^5.0.2
-  flutter_web_auth: ^0.3.0
+  flutter_web_auth:
+    path: ./flutter_web_auth
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,7 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  integration_test:
+    sdk: flutter
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
