ローカルホストの立ち上げのために、リポジトリを変更する

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SPOTIFY_CLIENT_ID=5a3aceed2a7a4e3c84af977f7272275c
 SPOTIFY_CLIENT_SECRET=11dbc666b5ed47929ee212753105cebc
-SPOTIFY_REDIRECT_URI=hackathonteam21://callback
+SPOTIFY_REDIRECT_URI=http://localhost:8000
